--- a/nutrilabel.css
+++ b/nutrilabel.css
@@ -2,7 +2,8 @@
   width: 310px;
   padding: 0 10px;
   font-family: 'Nunito';
-  font-size: 14px; }
+  font-size: 14px;
+  border: 2px solid black; }
   .nutrilabel a, .nutrilabel {
     color: #263236; }
   .nutrilabel * {
@@ -83,20 +84,29 @@
       padding-bottom: 10px; }
       .nutrilabel .section > .header.noborder {
         border: 0; }
+    .nutrilabel .section:last-child {
+      border-bottom: 0; }
+  .nutrilabel .header {
+    display: table !important;
+    width: 100%; }
   .nutrilabel .table {
-    display: table;
+    display: table-row;
     width: 100%; }
     .nutrilabel .table > * {
       display: table-cell;
-      vertical-align: top;
+      vertical-align: bottom;
       padding: 5px 0; }
     .nutrilabel .table > .column1 {
-      width: 170px;
-      padding-right: 10px; }
+      min-width: 160px;
+      padding-right: 10px;
+      max-width: 160px; }
     .nutrilabel .table > .column2 {
-      width: 90px;
-      text-align: left; }
+      max-width: 75px;
+      min-width: 75px;
+      text-align: right; }
     .nutrilabel .table > .column3 {
+      min-width: 75px;
+      max-width: 75px;
       text-align: right; }
   .nutrilabel .chevron {
     color: #cfd2d3; }
@@ -148,7 +158,8 @@
   .nutrilabel .nutritional-values {
     border-bottom: 0; }
     .nutrilabel .nutritional-values .header {
-      border-bottom: 1px solid #626262; }
+      border-bottom: 1px solid #626262;
+      display: table; }
   .nutrilabel .switcher {
     display: table;
     width: 100%; }
@@ -171,3 +182,13 @@
     overflow: hidden; }
   .nutrilabel .hidenutritional [data-showbydefault=false] {
     display: none; }
+  .nutrilabel .children {
+    font-style: italic;
+    padding-left: 10px; }
+    .nutrilabel .children, .nutrilabel .children b {
+      font-weight: normal;
+      color: #3b4e54; }
+    .nutrilabel .children .column1 {
+      padding-left: 10px; }
+
+/*# sourceMappingURL=nutrilabel.css.map */
