--- a/nutrilabel.scss
+++ b/nutrilabel.scss
@@ -61,6 +61,7 @@
     padding: 0 10px;
     font-family: 'Nunito';
     font-size: 14px;
+    border: 2px solid black;
 
     b {
         color: #263236;
@@ -92,33 +93,45 @@
         padding-bottom: 10px;
         border-bottom: 1px solid #626262;
 
+        &:last-child {
+            border-bottom: 0;
+        }
+
     }
 
+    .header {
+        display: table !important;
+        width: 100%;
+    }
     .table {
 
 
 
-        display: table;
+        display: table-row;
 
         width: 100%;
 
         >* {
             display: table-cell;
-            vertical-align: top;
+            vertical-align: bottom;
             padding: 5px 0;
         }
 
         > .column1 {
-            width: 170px;
+            min-width: 160px;
             padding-right: 10px;
+            max-width: 160px;
         }
 
         > .column2 {
-            width: 90px;
-            text-align: left;
+            max-width: 75px;
+            min-width: 75px;
+            text-align: right;
         }
 
         > .column3 {
+            min-width: 75px;
+            max-width: 75px;
             text-align: right;
         }
     }
@@ -202,6 +215,7 @@
 
         .header {
             border-bottom: 1px solid #626262;
+            display: table;
         }
     }
 
@@ -242,6 +256,18 @@
     }
 
 
+    .children {
+        &, b {
+            font-weight: normal;
 
+            color: lighten(#263236, 10%);
+        }
 
+        font-style: italic;
+        padding-left: 10px;
+        
+        .column1 {
+            padding-left: 10px;
+        }
+    }
 }
