--- a/nutrilabel.scss
+++ b/nutrilabel.scss
@@ -70,6 +70,8 @@
     h1 {
         font-family: 'PT Sans';
         font-size: 25px;
+        line-height: 1;
+        padding: .2em 0;
     }
 
     h2 {
