--- a/nutrilabel.scss
+++ b/nutrilabel.scss
@@ -151,7 +151,7 @@
             border: 1px solid #626262;
             position: relative;
             display: inline-block;
-            margin: 0 10px;
+            margin: 0 5px 0 33px;
             vertical-align: middle;
             > * {
                 display: table-cell;
