--- a/nutrilabel.css
+++ b/nutrilabel.css
@@ -119,7 +119,7 @@
       border: 1px solid #626262;
       position: relative;
       display: inline-block;
-      margin: 0 10px;
+      margin: 0 5px 0 33px;
       vertical-align: middle; }
       .nutrilabel .serving .unitSelect > * {
         display: table-cell;
