--- a/nutrilabel.scss
+++ b/nutrilabel.scss
@@ -58,7 +58,7 @@
 
     @include meyer-reset; 
     width: 250px;
-    padding: 0 10px;
+    padding: 5px 10px;
     font-family: 'Nunito';
     font-size: 12px;
     border: 2px solid black;
@@ -69,17 +69,19 @@
 
     h1 {
         font-family: 'PT Sans';
-        font-size: 19px;
+        font-size: 22px;
         line-height: 1;
-        padding: .2em 0;
+        padding: 8px 0px;
+        border-bottom: 1px solid #626262;
+        border-top: 4px double #626262;
     }
 
     h2 {
         font-family: 'Nunito';
         font-size: 15px;
-        border-bottom: 4px double #626262;
-        border-top: 4px double #626262;
-        padding: 10px 0px;
+        padding: 5px 0px;
+
+
 
     }
 
@@ -140,6 +142,7 @@
 
     .chevron {
         color: #cfd2d3;
+        font-size:13px;
     }
 
     .serving {
@@ -151,7 +154,7 @@
             border: 1px solid #626262;
             position: relative;
             display: inline-block;
-            margin: 0 5px 0 5px;
+            margin: 0 5px 0 33px;
             vertical-align: middle;
             > * {
                 display: table-cell;
@@ -164,18 +167,19 @@
                 padding-right: 3px;
                 > a {
                     display: block;
-                    font-size: 12px;
+                    font-size: 9px;
                 }
             }
 
             input.unitQuantityBox {
                 float: left;
                 width: 40px;
-                margin-top: 5px;
+                margin-top: 3px;
                 padding: 4px;
-                line-height: 15px \9;
+                line-height: 13px \9;
                 border: 0;
                 font-weight: bold;
+                font-size: 9px;
             }
         }
 
@@ -226,6 +230,13 @@
             border-bottom: 3px solid #626262;
             display: table;
             margin-bottom:5px;
+
+            .column3 {
+                max-width: 100px;
+                font-size: 10px;
+                font-weight:normal;
+                font-style:italic;
+            }
         }
     }
 
@@ -238,13 +249,13 @@
             text-decoration: none;
             font-size: 13px;
             width: 50%;
-            padding: 10px 0px;
+            padding: 5px 0px;
+            border-bottom: 1px solid #626262;
 
             &:last-child {
                 border-left: 1px solid #626262;
             }
 
-            border-bottom: 1px solid #626262;
 
             &.selected {
                 border-bottom: 0;
@@ -257,7 +268,7 @@
     }
 
     .short {
-        height: 50px;
+        height: 0px;
         overflow:hidden;
     }
 
