--- a/nutrilabel.scss
+++ b/nutrilabel.scss
@@ -67,20 +67,23 @@
         color: #263236;
     }
 
+    h3 {
+        border-bottom: 4px double #626262;
+        margin-bottom: 10px;
+    }
     h1 {
         font-family: 'PT Sans';
         font-size: 22px;
         line-height: 1;
-        padding: 8px 0px;
+        padding: 0px 0px 8px 0px;
         border-bottom: 1px solid #626262;
-        border-top: 4px double #626262;
+
     }
 
     h2 {
         font-family: 'Nunito';
         font-size: 15px;
         padding: 5px 0px;
-
 
 
     }
@@ -295,13 +298,13 @@
                 padding-left: 20px;
             }
         }
-        
+
         &.children3 {
             .column1 {
                 padding-left: 30px;
             }
         }
-        
+
         &.children4 {
             .column1 {
                 padding-left: 40px;
