--- a/nutrilabel.css
+++ b/nutrilabel.css
@@ -69,13 +69,17 @@
     color: #263236; }
   .nutrilabel h3 {
     border-bottom: 4px double #626262;
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    width: 100%; }
   .nutrilabel h1 {
     font-family: 'PT Sans';
-    font-size: 22px;
-    line-height: 1;
     padding: 0px 0px 8px 0px;
-    border-bottom: 1px solid #626262; }
+    border-bottom: 1px solid #626262;
+    margin: 0;
+    line-height: 1em;
+    font-weight: bold;
+    letter-spacing: -1px;
+    font-size: 2.5em; }
   .nutrilabel h2 {
     font-family: 'Nunito';
     font-size: 15px;
