--- a/nutrilabel.scss
+++ b/nutrilabel.scss
@@ -70,13 +70,17 @@
     h3 {
         border-bottom: 4px double #626262;
         margin-bottom: 10px;
+        width: 100%;
     }
     h1 {
         font-family: 'PT Sans';
-        font-size: 22px;
-        line-height: 1;
         padding: 0px 0px 8px 0px;
         border-bottom: 1px solid #626262;
+        margin: 0;
+        line-height: 1em;
+        font-weight: bold;
+        letter-spacing: -1px;
+        font-size: 2.5em;
 
     }
 
