--- a/nutrilabel.css
+++ b/nutrilabel.css
@@ -76,10 +76,10 @@
     padding: 0px 0px 8px 0px;
     border-bottom: 1px solid #626262;
     margin: 0;
-    line-height: 1em;
-    font-weight: bold;
-    letter-spacing: -1px;
-    font-size: 2.5em; }
+    line-height: 1em !important;
+    font-weight: bold !important;
+    letter-spacing: -1px !important;
+    font-size: 2.5em !important; }
   .nutrilabel h2 {
     font-family: 'Nunito';
     font-size: 15px;
