--- a/kpi.css
+++ b/kpi.css
@@ -3,9 +3,9 @@
   font-size: 13px;
   background-color: #FFF;
   border: 2px solid #d1d1d1;
-  cursor: help;
   height: 65px;
-  margin-top: 5px; }
+  margin-top: 5px;
+  width: 255px; }
   .kpi_idr .inner {
     margin-left: 10px;
     margin-right: 10px;
@@ -42,5 +42,40 @@
       .kpi_idr table .percent.fill {
         background: #62b304;
         border: 1px solid #62b304; }
+
+.kpi_calories {
+  font-family: Helvetica,Arial;
+  font-size: 13px;
+  background-color: #FFF;
+  border: 2px solid #d1d1d1;
+  height: 65px;
+  margin-top: 5px;
+  width: 255px; }
+  .kpi_calories .inner {
+    margin: 10px; }
+  .kpi_calories .info {
+    float: left;
+    font-size: 10px; }
+    .kpi_calories .info ul {
+      margin: 0;
+      padding: 0; }
+    .kpi_calories .info li {
+      list-style-type: none; }
+    .kpi_calories .info h2 {
+      font-size: 12px;
+      margin: 0;
+      margin-bottom: 2px; }
+    .kpi_calories .info .box {
+      display: inline-block;
+      width: 5px;
+      height: 5px; }
+      .kpi_calories .info .box.carbon {
+        background-color: #4bb89a; }
+      .kpi_calories .info .box.fat {
+        background-color: #d7a701; }
+      .kpi_calories .info .box.protein {
+        background-color: #b65c51; }
+  .kpi_calories canvas {
+    float: right; }
 
 /*# sourceMappingURL=kpi.css.map */
