--- a/kpi.css
+++ b/kpi.css
@@ -52,7 +52,7 @@
           border-color: #9db321; }
         .kpi_idr table .percent.fill.fat {
           background-color: #f24c27;
-          border-color: #9db321; }
+          border-color: #f24c27; }
         .kpi_idr table .percent.fill.protein {
           background-color: #0092b2;
           border-color: #0092b2; }
