--- a/kpi.scss
+++ b/kpi.scss
@@ -71,7 +71,7 @@
 
                 &.fat {
                     background-color: #f24c27;
-                    border-color:#9db321;
+                    border-color:#f24c27;
                 }
 
                 &.protein {
