--- a/carbon.scss
+++ b/carbon.scss
@@ -1,7 +1,7 @@
 $end: #4b6500;
 $start: #699300;
 
-.carbon {
+.kpi-carbon {
     font-family:Tahoma;
     width: 90px;
     height: 95px;
@@ -24,7 +24,7 @@ $start: #699300;
     }
 
     .inner {
-        padding-top: 15px;fil
+        padding-top: 15px;
         text-align:center;
         font-size: 35px;
     }
