--- a/carbon.css
+++ b/carbon.css
@@ -1,7 +1,7 @@
 .kpi-carbon {
   font-family: Tahoma;
   width: 90px;
-  height: 95px;
+  height: 115px;
   background-color: #699300;
   background-image: linear-gradient(#699300, #4b6500);
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=$start, endColorstr=$end)";
@@ -11,7 +11,7 @@
     font-size: 12px;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 22px;
     position: absolute;
     text-align: center;
     padding-bottom: 3px; }
@@ -19,5 +19,16 @@
     padding-top: 15px;
     text-align: center;
     font-size: 35px; }
+  .kpi-carbon .explanation {
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    position: absolute;
+    bottom: 3px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    text-align: center; }
 
 /*# sourceMappingURL=carbon.css.map */
