--- a/carbon.scss
+++ b/carbon.scss
@@ -4,7 +4,7 @@ $start: #699300;
 .kpi-carbon {
     font-family:Tahoma;
     width: 90px;
-    height: 95px;
+    height: 115px;
     background-color: $start;
     background-image: linear-gradient($start,$end);
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=$start, endColorstr=$end)";
@@ -16,7 +16,7 @@ $start: #699300;
         font-size: 12px;
         left:0;
         right:0;
-        bottom:0;
+        bottom:22px;
         position: absolute;
         text-align:center;
         padding-bottom:3px;
@@ -27,6 +27,19 @@ $start: #699300;
         padding-top: 15px;
         text-align:center;
         font-size: 35px;
+    }
+
+    .explanation {
+        display: block;
+        font-size: 16px;
+        font-weight: bold;
+        cursor: pointer;
+        position: absolute;
+        bottom: 3px;
+        left: 0;
+        right: 0;
+        width: 100%;
+        text-align: center;
     }
 }
 
