Some design fixes

--- a/carbon.css
+++ b/carbon.css
@@ -11,12 +11,12 @@
     font-size: 12px;
     left: 0;
     right: 0;
-    bottom: 22px;
+    bottom: 10px;
     position: absolute;
     text-align: center;
     padding-bottom: 3px; }
   .kpi-carbon .inner {
-    padding-top: 15px;
+    padding-top: 25px;
     text-align: center;
     font-size: 35px; }
   .kpi-carbon .explanation {
@@ -25,10 +25,9 @@
     font-weight: bold;
     cursor: pointer;
     position: absolute;
-    bottom: 3px;
+    top: 3px;
     left: 0;
-    right: 0;
-    width: 100%;
-    text-align: center; }
+    right: 10px;
+    text-align: right; }
 
 /*# sourceMappingURL=carbon.css.map */
