--- a/kpi.scss
+++ b/kpi.scss
@@ -83,10 +83,11 @@
     }
 
     position: relative;
+    padding-top:20px;
     .explanation {
         position: absolute;
-        left: 7px;
-        bottom: 5px;
+        right: 7px;
+        top: 5px;
         display: block;
         font-size: 16px;
         font-weight: bold;
@@ -148,10 +149,11 @@
     }
 
     position: relative;
+    padding-top:20px;
     .explanation {
         position: absolute;
-        left: 7px;
-        bottom: 5px;
+        right: 7px;
+        top: 5px;
         display: block;
         font-size: 16px;
         font-weight: bold;
